# gtest_template

./: .gitignore  CMakeLists.txt  README.md  TEST_DEFINITION.h  TEST_MAIN.cpp  install_googletest.sh
develop/: CMakeLists.txt  main.cpp  myFunctions.cpp  myFunctions.h
test/: CMakeLists.txt  TEST_DEFINITION.h  TEST_MAIN.cpp
